<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>polaris</artifactId>
        <groupId>com.polaris</groupId>
        <version>3.9.2</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>polaris-ai</artifactId>

    <description>
       ai大模型模块
    </description>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>

		<!-- LangChain4j 核心 -->
		<dependency>
		    <groupId>dev.langchain4j</groupId>
		    <artifactId>langchain4j</artifactId>
		    <version>1.17.0</version>
		</dependency>
		
		<!-- OpenAI 适配（DashScope / DeepSeek / OpenAI 均走此模块） -->
		<dependency>
		    <groupId>dev.langchain4j</groupId>
		    <artifactId>langchain4j-open-ai</artifactId>
		    <version>1.17.0</version>
		</dependency>
		
		<!-- SpringWeb模块 -->
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-webmvc</artifactId>
		</dependency>
		
		<!-- 通用工具-->
		<dependency>
		    <groupId>com.polaris</groupId>
		    <artifactId>polaris-common</artifactId>
		</dependency>

		<!-- 引入系统管理模块，以使用用户、角色、部门等服务接口 -->
		<dependency>
		    <groupId>com.polaris</groupId>
		    <artifactId>polaris-system</artifactId>
		</dependency>

		<!-- PDF 解析器 PDFBox -->
		<dependency>
		    <groupId>org.apache.pdfbox</groupId>
		    <artifactId>pdfbox</artifactId>
		    <version>2.0.31</version>
		</dependency>

		<!-- LangGraph4j 核心：图状态机引擎 -->
		<dependency>
		    <groupId>org.bsc.langgraph4j</groupId>
		    <artifactId>langgraph4j-core</artifactId>
		</dependency>

		<!-- LangGraph4j ↔ LangChain4j 适配层 -->
		<dependency>
		    <groupId>org.bsc.langgraph4j</groupId>
		    <artifactId>langgraph4j-langchain4j</artifactId>
		    <exclusions>
		        <exclusion>
		            <groupId>dev.langchain4j</groupId>
		            <artifactId>langchain4j</artifactId>
		        </exclusion>
		        <exclusion>
		            <groupId>dev.langchain4j</groupId>
		            <artifactId>langchain4j-open-ai</artifactId>
		        </exclusion>
		        <exclusion>
		            <groupId>org.springframework.boot</groupId>
		            <artifactId>spring-boot</artifactId>
		        </exclusion>
		        <exclusion>
		            <groupId>org.springframework.boot</groupId>
		            <artifactId>spring-boot-autoconfigure</artifactId>
		        </exclusion>
		    </exclusions>
		</dependency>

		<!-- LangGraph4j MySQL 持久化检查点存储 -->
		<dependency>
		    <groupId>org.bsc.langgraph4j</groupId>
		    <artifactId>langgraph4j-mysql-saver</artifactId>
		    <exclusions>
		        <exclusion>
		            <groupId>org.springframework.boot</groupId>
		            <artifactId>spring-boot</artifactId>
		        </exclusion>
		        <exclusion>
		            <groupId>org.springframework.boot</groupId>
		            <artifactId>spring-boot-autoconfigure</artifactId>
		        </exclusion>
		    </exclusions>
		</dependency>

		<!-- Lombok 依赖 -->
		<dependency>
		    <groupId>org.projectlombok</groupId>
		    <artifactId>lombok</artifactId>
		    <scope>provided</scope>
		</dependency>

		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-test</artifactId>
		    <scope>test</scope>
		</dependency>

    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
			</plugin>
		</plugins>
	</build>

</project>
